[package]
name = "schatkaart"
version = "0.1.0"
authors = ["mahulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
piston_window = "0.89.0"
find_folder = "0.3.0"
vecmath = "0.3.0"
camera_controllers = "0.27.0"
rand = "0.6.0"
shader_version = "0.3.0"
imageproc = "0.18.0"
other-image = { version = "0.21", package = "image" }
log = "0.4.0"
simple_logger = "1.0"